--- a/src/output.css
+++ b/src/output.css
@@ -619,6 +619,11 @@ video {
   background-color: rgb(203 213 225 / var(--tw-bg-opacity, 1));
 }
 
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -649,6 +654,10 @@ video {
     display: none;
   }
 
+  .md\:w-svw {
+    width: 100svw;
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -665,12 +674,29 @@ video {
     margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:border {
+    border-width: 1px;
+  }
+
   .md\:bg-slate-50 {
     --tw-bg-opacity: 1;
     background-color: rgb(248 250 252 / var(--tw-bg-opacity, 1));
   }
 
+  .md\:bg-white {
+    --tw-bg-opacity: 1;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  }
+
+  .md\:bg-inherit {
+    background-color: inherit;
+  }
+
   .md\:p-0 {
     padding: 0px;
+  }
+
+  .md\:p-5 {
+    padding: 1.25rem;
   }
 }
